Add checks for formation Edit and Flip button, more units